# Mirage-Omega1

./: .env.development  .env.production  .gitignore  README.md  pyproject.toml
api/: main.py
api/core/: config.py
api/handlers/: error_handlers.py
api/logging/: logger.py
api/middlewares/: custom_middleware.py
api/routes/: routers.py
api/schemas/: language_translate.py  log_schema.py
api/security/: filters.py
api/services/: translate_service.py
api/tests/: test_translate_service.py
ml_models/ete-synthesis/: file_name_convert.py  load_decode.ipynb  main.py
ml_models/ete-synthesis/cleaner/: data_cleaning.py
ml_models/ete-synthesis/file_converter/: file_name_convert.py  wav_converter.py
ml_models/ete-synthesis/testing/: load_decode.ipynb
ml_models/ete_synthesis/: wav_converter.py
ml_models/ete_synthesis/notebooks/: load_decode.ipynb  test.ipynb
ml_models/ete_synthesis/testing/: test.ipynb
ml_models/language_detect/: language_detect.py
ml_models/text_to_text_translate/: model_controller.py
ml_models/text_to_text_translate/model/: google_model.py  model.py  transformers_model.py  translator.py
ml_models/text_to_text_translate/models/: google_trans_model.py
schemas/: lang_trans_schema.py
