[tool.poetry]
name = "mirage-omega1"
version = "1.0.0"
description = "Voice Cloning model by 3R Minds."
authors = ["Mohit N. Vashisth <mohitnarayanvashisth2703@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.12"
python-json-logger = "^3.3.0"
fasttext-wheel = "^0.9.2"
rich = "^13.9.4"
beanie = "^1.29.0"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"
pathlib = "^1.0.1"
authlib = "^1.5.1"
httpx = "^0.28.1"
pyttest = "^1.0.1"
pytest-asyncio = "^0.26.0"
hypothesis = "^6.130.5"
pymongo = "^4.11.3"
pytest = "^8.3.5"
torch = "2.5.0"
tts = "^0.22.0"
deep-translator = "^1.11.4"

[tool.poetry.scripts]
dev = "api.main:initializeAPP"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.6.1"
httpx = "^0.28.1"
pytest = "^8.3.5"
anyio = "^4.9.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"